# rerun_rlds_ur5

./: README.md  pyproject.toml
src/: rlds.py
src/rerun_rlds_ur5/: common.py  raw.py  rerun_loader_urdf.py  rlds.py
src/rerun_rlds_ur5/ur_description/: ur5.urdf  ur5_updated.urdf
src/rerun_ur5_rlds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_rlds.ipynb
ur_description/urdf/: ur5.urdf
