[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rerun_ur5_rlds"
version = "0.0.1"
authors = [
  { name="William Xie", email="wixi6454@colorado.edu" },
]
description = "magpie_perception"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'rerun-sdk>=0.16.0',
  'numpy',
  'scipy',
  'h5py',
  'opencv-python',
  'trimesh',
  'urdf_parser_py',
  'pycollada',
  'gcsfs',
]

#'tensorflow', 'tensorflow_datasets',

[project.urls]
Homepage = "https://github.com/correlllab/magpie_perception"
Issues = "https://github.com/correlllab/magpie_perception/issues"