[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rerun_rlds_ur5" = ["ur_description/**/*.urdf", "ur_description/meshes/**/*.stl", "ur_description/meshes/**/*.dae"]

[project]
name = "rerun_rlds_ur5"
version = "0.0.1"
authors = [
  { name="William Xie", email="wixi6454@colorado.edu" },
]
description = "rerun_rlds_ur5"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'rerun-sdk>=0.16.0',
  'numpy',
  'scipy',
  'h5py',
  'opencv-python',
  'trimesh',
  'urdf_parser_py',
  'pycollada',
  'gcsfs',
]

#'tensorflow', 'tensorflow_datasets',

[project.urls]
Homepage = "https://github.com/badinkajink/rerun_rlds_ur5"
Issues = "https://github.com/badinkajink/rerun_rlds_ur5/issues"